# kinship-verification-toolkit

./: .gitignore  README.md  pyproject.toml  run_kinship.py
configs/benchmarks/: native-ports.toml  supported-smoke.toml
configs/experiments/: classical-fs-chisq-smoke.toml  classical-fs-kfold-smoke.toml  classical-fs-random-smoke.toml  family-deep-fiw-small-siamese-fs-test.toml  family-deep-fiw-small-siamese-fs-train.toml  family-deep-kinfacew-small-siamese-test.toml  family-deep-kinfacew-small-siamese-train.toml  gae-fs-train-p16-multiview.toml  gae-fs-train-p16-standard.toml  kinver-fs-smoke.toml
data/: README.md
data/kinface/testdata/: fd_0005_test_p16.mat  fd_0018_test_p16.mat  fd_0026_test_p16.mat  fd_0029_test_p16.mat  fd_0031_test_p16.mat  fd_0035_test_p16.mat  fd_0044_test_p16.mat  fs_0004_test_p16.mat  fs_0018_test_p16.mat  fs_0031_test_p16.mat  fs_0035_test_p16.mat  md_0005_test_p16.mat  md_0018_test_p16.mat  md_0026_test_p16.mat  md_0029_test_p16.mat  md_0031_test_p16.mat  md_0033_test_p16.mat  md_0035_test_p16.mat  md_0044_test_p16.mat  ms_0004_test_p16.mat  ms_0018_test_p16.mat  ms_0031_test_p16.mat  ms_0033_test_p16.mat  ms_0035_test_p16.mat
data/kinface/traindata/: fd_0049_train_p16.mat  fs_0050_train_p16.mat  md_0005_train_p16.mat  md_0006_train_p16.mat  md_0049_train_p16.mat  ms_0006_train_p16.mat  ms_0050_train_p16.mat
src/kinship/: __init__.py  cli.py  configs.py  paths.py  registry.py  reporting.py  runner.py
src/kinship/algorithms/: __init__.py  (+8 more)
tests/: test_configs_and_runner.py  test_mydataset.py  test_native_ports.py  test_smoke.py
(+5 files in other folders)
